# homework_10.1

./: .flake8  README.md  pyproject.toml
src/: decorators.py  generators.py  masks.py  processing.py  transactions_csv_excel.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_transactions_csv_excel.py  test_utils.py  test_widget.py
