[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Vera Kovalchuk <kovalchukvera86@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"


[tool.black]
# Максимальная длина строки
line-length = 119
exclude = '''
(
/(
\.git # в корне проекта
).
)
'''

[tool.isort]
# Максимальная длина строки
line-length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
